# Fire-Simulator

./: README.md
FDYN/Code/AppMain/: AppMain.cpp  CMakeLists.txt  FDYNAppMain.pro  PCH_AppMain.cpp  PCH_AppMain.h
FDYN/Code/Plugins/DataCollectors/FCFAST/: CMakeLists.txt  FCFAST.h  FCFAST.pro  PCH_FCFAST.cpp  PCH_FCFAST.h
FDYN/Code/UI/: CMakeLists.txt  PCH_UI.cpp
FDYN/Code/UI/Dialogs/About/: NEAboutDialog.cpp  NEAboutDialog.ui
FDYN/Code/UI/Dialogs/Abstract/: NEAbstractDialog.cpp  NEAbstractDialog.h
FDYN/Code/UI/Dialogs/ColorPreset/: NEColorPresetDialog.h
FDYN/Code/UI/Dialogs/Curve/: NECurveDialog.cpp  NECurveDialog.ui  NEEnumCurveScene.cpp  NEEnumCurveScene.h  NEKey.cpp  NEKey.h
FDYN/Code/UI/Dialogs/Process/: NEProcessDialog.cpp  NEProcessDialog.h  NEProcessDialog.ui
FDYN/Code/UI/Dialogs/SceneManagement/: NESceneManagementDialog.h
FDYN/Code/UI/Managers/: NEGUIManager.cpp  NEGUIManager.h  NEGUIManager_p.h
FDYN/Code/UI/Resources/icons/: Scene.icns
FDYN/Code/UI/Utilities/: NEGUIStyle.h  NEUIApplication.cpp  ganalytics.cpp  ganalytics.h  trackball.c
FDYN/Code/UI/Widgets/Dock/: NEDockWidget.cpp
FDYN/Code/UI/Widgets/LineNumberArea/: NELineNumberArea.h
FDYN/Code/UI/Widgets/Menu/: NEMenu.cpp  NEMenu.h
FDYN/Code/UI/Widgets/MenuBar/: NEMenuBar.cpp
FDYN/Code/UI/Widgets/ShelfBar/: NEShelfBar.cpp  NEShelfBar.h
FDYN/Code/UI/Widgets/Shortcut/: NEShortcutToolbar.h  NEShortcutWidget.cpp
FDYN/Code/UI/Widgets/Timeline/: NETimeline.cpp  NETimelineWidget.cpp  NETimelineWidget.h
FDYN/Code/UI/Windows/FZoneInspector/: FZoneInspector.cpp  FZoneInspector.h  FZoneInspectorWindow.cpp  FZoneInspectorWindow.h
FDYN/Code/UI/Windows/KeyframeInspector/: NEKeyframeInspector.ui
FDYN/Code/UI/Windows/Main/: NEMainWindow.h
FDYN/Code/UI/Windows/PropertyManager/: NEColorRampEditor.cpp  NEDoubleSpinBox.cpp  NEDoubleSpinBox.h  NEObjectController_p.h  NEPropertyEditor.cpp  NEPropertyEditor.h  NEPropertyEditorWindow.cpp  NEPropertyEditorWindow.h  NEPropertyEditorWindow.ui  NEVariantManager.cpp  NEVariantManager.h  fileedit.cpp  qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.h
NVIS/: CMakeLists.txt  Copyright.py  README.md
NVIS/Code/: CMakeLists.txt  NVIS.pro
NVIS/Code/AppMain/: AppMain.cpp  CMakeLists.txt  NEAppMain.pro  PCH_AppMain.h
NVIS/Code/GLI/: NEGLI.pro  NEGLIW.pro  NEGLWidget.cpp  NEGLWidget.h  NEGLWidget_p.h  PCH_GLI.h  globals_GLI.h  install.pri
NVIS/Code/GLI/gizmo/: CMakeLists.txt  GizmoTransform.h  GizmoTransformMove.cpp  GizmoTransformMove.h  GizmoTransformRender.cpp  GizmoTransformRender.h  GizmoTransformRotate.cpp  GizmoTransformRotate.h  GizmoTransformScale.cpp  GizmoTransformScale.h  IGizmo.h  Makefile  Makefile.Debug  Makefile.Release  ZBaseDefs.h  ZBaseMaths.h  ZBaseMaths.inl  gizmo.pro  gizmo_global.h  install.pri
NVIS/Code/Geometry/: CMakeLists.txt  NEGeometry.pro  PCH_Geometry.cpp  PCH_Geometry.h  globals_Geometry.h  install.pri
NVIS/Code/Geometry/Manager/: NEMeshVolGeometryManager.cpp  NEMeshVolGeometryManager.h
NVIS/Code/Geometry/Mesh/: NEMeshConstructor.cpp  NEMeshConstructor.h  NEScenario.cpp  NEScenario.h  NEScenarioItem.cpp  NEScenarioItem.h  NESpatialEngine.cpp  NESpatialEngine.h  NESpatialMesh.cpp  NESpatialMesh.h  NEZone.cpp  NEZone.h  NEZoneCompartment.cpp  NEZoneCompartment.h  NEZoneItem.cpp  NEZoneItem.h
NVIS/Code/Geometry/QMake/: config.pri  geometry.pri
NVIS/Code/Geometry/Utility/: NECableProperty.cpp  NECableProperty.h  NECustomVariants.cpp  NECustomVariants.h  NEFailureCriteria.cpp  NEFailureCriteria.h  NEFireMaterial.cpp  NEFireMaterial.h  NESurfaceMaterial.cpp  NESurfaceMaterial.h  NEVentCriteria.cpp  NEVentCriteria.h
NVIS/Code/Geometry/Volume/: NEVolume.pro
NVIS/Code/QMake/: common.pri
NVIS/Code/Render/: NERender.pro  PCH_Render.h  globals_Render.h  install.pri
NVIS/Code/Render/QMake/: rendering.pri
NVIS/Code/Render/Rendering/: NEGLRenderableMesh.cpp  NEGLRenderableMesh.h  NEGLRenderer.cpp  NEGLRenderer.h  NEGLRenderer_p.h  NEOsd3d.cpp  NEOsd3d.h
NVIS/Code/Render/Utility/: glutils.cpp  glutils.h
NVIS/Code/RenderNEO/: CMakeLists.txt  NERenderNEO.pro  PCH_RenderNEO.cpp  PCH_RenderNEO.h  globals_RenderNEO.h
NVIS/Code/UI/: NEUI.pro  NEUIApplication.cpp  NEUIApplication.h  NEUpdater.cpp  NEUpdater.h  NEUpdaterDialog.cpp  NEUpdaterDialog.h  PCH_UI.h  globals_UI.h  neutrino.qrc  neutrino.ui
NVIS/Code/UI/Managers/: NEGUIManager.cpp  NEGUIManager.h  NEGUIManager_p.h
NVIS/Code/UIProperties/: NEUIProperties.pro  PCH_UIProperties.h  globals_UIProperties.h  install.pri
NVIS/Code/UIUtilities/: NEUIUtilities.pro  PCH_UIUtilities.h  globals_UIUtilities.h  install.pri
NVIS/Code/UIUtilities/Utilities/: NEGUIStyle.cpp  NEGUIStyle.h  NELogBrowser.cpp  NELogBrowser.h  ganalytics.h
NVIS/Code/cmake/: common.cmake
NVIS/Data/: neutrino.state  spray_burner.0000002290.q  spray_burner.xyz
NVIS/Data/Lib/: _ctypes.pyd  _ctypes_test.pyd  _elementtree.pyd  _multiprocessing.pyd  _socket.pyd  _testcapi.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd  winsound.pyd
NVIS/Data/NEScenes/: untitled.nescene  untitled.nescene.backup_0
NVIS/Data/Plugins/: sample_plugin_config.pri
NVIS/Data/Plugins/SampleEmitter/: NESampleEmitter.cpp  NESampleEmitter.h  NESampleEmitter.pro  Precomp.h
NVIS/Data/Plugins/SampleSPHSolver/: NESampleSphParticle.h  NESampleSphSolver.cpp  NESampleSphSolver.h  SampleSPHSolver.pro
NVIS/Data/Plugins/SampleSimpleSolver/: NESampleSimpleParticle.h  NESampleSimpleSolver.cpp  NESampleSimpleSolver.h  Precomp.h  SampleSimpleSolver.pro
NVIS/Data/System/Shaders/: colorManip.frag  colorManip.vert
NVIS/NDYN/include/Core/: NEObject.h
NVIS/NDYN/include/PostProcessor/: globals_PostProcessor.h
NVIS/NDYN_Debug/include/Core/: NEResource.h
NVIS/NDYN_Debug/lib/: NECore.lib  NEPhysics.lib
NVIS/QMake/: cuda_build.pri  external_lib_config.pri  external_tool_config.pri  install.pri  openacc_build.pri  plugin_config.pri  tool_config.pri  utility.pri
NVIS/cmake/: external_lib_config.cmake  install.cmake  plugin_config.cmake  utility.cmake
(+1066 files in other folders)
